# rocJPEG

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  rocJPEG-setup.py
.azuredevops/: rocm-ci.yml
.jenkins/: common.groovy  precheckin.groovy
api/: rocjpeg.h  rocjpeg_version.h
api/amd_detail/: rocjpeg_api_trace.h
cmake/: FindLibva.cmake  FindrocJPEG.cmake
docker/: rocJPEG-on-ubuntu20.dockerfile  rocJPEG-on-ubuntu22.dockerfile
docs/: .gitignore  conf.py  index.rst  what-is-rocJPEG.rst
docs/doxygen/: Doxyfile
docs/how-to/: rocjpeg-decoding-a-jpeg-stream.rst  rocjpeg-retrieve-image-info.rst  using-rocjpeg.rst
docs/install/: install.rst  quick-start.rst  rocjpeg-build-and-install.rst  rocjpeg-package-install.rst  rocjpeg-prerequisites.rst
docs/reference/: rocjpeg-formats-and-architectures.rst
docs/sphinx/: _toc.yml.in  requirements.txt
samples/: CMakeLists.txt  README.md  rocjpeg_samples_utils.h
samples/jpegDecode/: CMakeLists.txt  README.md  jpegdecode.cpp
samples/jpegDecodeBatched/: CMakeLists.txt  README.md  jpegdecodebatched.cpp
samples/jpegDecodeMultiThreads/: CMakeLists.txt  README.md  jpegdecodemultithreads.cpp
samples/jpegDecodePerf/: CMakeLists.txt  README.md  jpegdecodeperf.cpp
src/: rocjpeg_api.cpp  rocjpeg_api_decoder_handle.h  rocjpeg_api_handle.h  rocjpeg_api_stream_handle.h  rocjpeg_commons.h  rocjpeg_decoder.cpp  rocjpeg_decoder.h  rocjpeg_hip_kernels.cpp  rocjpeg_hip_kernels.h  rocjpeg_parser.cpp  rocjpeg_parser.h  rocjpeg_vaapi_decoder.cpp  rocjpeg_vaapi_decoder.h
src/amd_detail/: rocjpeg_api_dispatch_interface.cpp  rocjpeg_api_trace.cpp
test/: CMakeLists.txt
